[package]
name = "pyre"
version = "0.1.2"
edition = "2021"
description = "The better PIP, i guess. Or maybe not. Well, helps you create and manage your Python projects."
author = "Dhravya Shah"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dialoguer = "0.10.0"
dirs = "4.0.0"
json = "0.12.4"