[package]
name = "pyre"
version = "0.1.4"
edition = "2021"
description = "Create, open, manage your Python projects with ease."
author = "Dhravya Shah"
license = "MIT"
exclude = ["./assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dialoguer = "0.10.0"
dirs = "4.0.0"
json = "0.12.4"